Update hero and main components

--- a/src/app/shared/main/main.component.html
+++ b/src/app/shared/main/main.component.html
@@ -1,3 +1,17 @@
-<main>
-    <section><!-- Main content here --></section>
-</main>
+<div class="consent-container">
+    <div class="consent-checkbox">
+        <mat-checkbox color="primary" class="example-margin">
+            By checking this box, I confirm that I have read and acknowledged the <a
+                href="your-link-to-privacy-policy">Privacy Notice</a> of Carebox.
+        </mat-checkbox>
+    </div>
+    <div class="consent-action">
+        <button type="button" class="start-questionnaire">Start questionnaire</button>
+    </div>
+    <div class="consent-info">
+        <p>Please note: Select the Location & Language, on the upper-right of the Carebox Privacy Policy page in the
+            link at left, in accordance with your geography to display the applicable privacy notice.</p>
+        <p>HCP information will only be used for the purposes of being contacted regarding being a potential
+            Investigator in a clinical trial.</p>
+    </div>
+</div>
