Update header component HTML and SCSS files

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,15 +5,12 @@
 
     </div>
     <span class="example-spacer"></span>
-    <div class="navigation">
-      <!-- Add navigation links here -->
-    </div>
-
-    <mat-icon matBadge="15" matBadgeColor="warn">mail</mat-icon>
-
-
+    <div class="actions">
+      <mat-icon matBadge="15" matBadgeColor="primary">mail</mat-icon>
     <button mat-icon-button aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
+    </div>
+
   </mat-toolbar-row>
 </mat-toolbar>
