--- a/src/app/shared/main/main.component.scss
+++ b/src/app/shared/main/main.component.scss
@@ -1,5 +1,5 @@
-
 @import './../../../assets/_mixins';
+@import './../../../assets/_variables';
 
 .consent-container {
   display: flex;
@@ -11,18 +11,17 @@
   .consent-checkbox {
     display: flex;
     align-items: center;
-
-    input[type="checkbox"] {
-      margin-right: 0.5rem;
-    }
-
-    label {
+    font-family: "Helvetica Neue";
       font-size: 0.875rem;
-    }
+    font-style: normal;
+      font-weight: 400;
+      line-height: 1.375rem;
+      letter-spacing: 0.00625rem;
 
     a {
-      color: #0056b3;
-      text-decoration: none;
+      color: $theme-text-primary;
+        font-weight: bold;
+        text-decoration: underline;
 
       &:hover {
         text-decoration: underline;
@@ -32,7 +31,7 @@
 
   .consent-action {
     button.start-questionnaire {
-      background-color: #9c27b0; // Example purple color
+      background-color: $theme-primary;
       color: white;
       border: none;
       padding: 0.5rem 1rem;
@@ -42,7 +41,7 @@
       text-transform: uppercase;
 
       &:hover {
-        background-color: darken(#9c27b0, 10%);
+        background-color: darken($theme-primary, 10%);
       }
     }
   }
