--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -83,7 +83,7 @@
   p {
     color: $theme-text-dark;
     text-align: left;
-    font-family: "Helvetica Neue";
+    font-family: "poppins";
     font-size: 1.25rem;
     font-style: normal;
     line-height: 1.5rem;
