--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,7 +1,7 @@
  $theme-primary: #830051;
  $theme-secondary: #013865;
  $theme-surface: #fff;
- $theme-border: #edf0ee40;
+ $theme-border: #9EB0AC;
  $theme-background: #fafafa;
  $theme-footer-background: #1B1B1B;
  $theme-text-dark: #3c4242;
