--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,4 @@
-<mat-toolbar>
-  <mat-toolbar-row>
+<mat-toolbar class="header">
     <div class="logo">
       <img width="184px" height="33px" src="./../../../assets/logoColored.svg" alt="Logo">
 
@@ -7,10 +6,9 @@
     <span class="example-spacer"></span>
     <div class="actions">
       <mat-icon matBadge="15" matBadgeColor="primary">mail</mat-icon>
-    <button mat-icon-button aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
-    </button>
+      <button mat-icon-button aria-label="Example icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
     </div>
 
-  </mat-toolbar-row>
 </mat-toolbar>
