--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,14 +1,14 @@
-<mat-toolbar class="header">
+<header class="custom-toolbar">
     <div class="logo">
       <img width="184px" height="33px" src="./../../../assets/logoColored.svg" alt="Logo">
 
     </div>
     <span class="example-spacer"></span>
     <div class="actions">
-      <mat-icon matBadge="15" matBadgeColor="primary">mail</mat-icon>
+      <mat-icon aria-hidden="false" matBadge="15" matBadgeColor="primary">mail</mat-icon>
       <button mat-icon-button aria-label="Example icon-button with menu icon">
-        <mat-icon>menu</mat-icon>
+        <mat-icon aria-hidden="false">menu</mat-icon>
       </button>
     </div>
 
-</mat-toolbar>
+</header>
