--- a/src/app/shared/main/main.component.html
+++ b/src/app/shared/main/main.component.html
@@ -1,8 +1,9 @@
 <div class="consent-container">
     <div class="consent-form">
         <mat-checkbox class="custom-checkbox" color="primary">
-            By checking this box, I confirm that I have read and acknowledged the <a
-                href="your-link-to-privacy-policy">Privacy Notice</a> of Carebox.
+            By checking this box, I confirm that I have read and
+            acknowledged the
+            <a href="#">Privacy Notice</a> of Carebox.
         </mat-checkbox>
         <button mat-button class="consent-button">
             Start questionnaire
