--- a/src/app/shared/hero/hero.component.scss
+++ b/src/app/shared/hero/hero.component.scss
@@ -29,7 +29,7 @@
   }
 
   .hero-img {
-    width: 400px;
+    width: 440px;
 
     @media (min-width: breakpoint('desktop')) {
       display: none;
@@ -57,6 +57,7 @@
     }
 
     @media (max-width: breakpoint('mobile')) {
+      padding: 0rem 1.3rem;
       width: 100%;
       height: auto;
       margin: 0;
