Update privacy choices link in footer component

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -13,7 +13,8 @@
         <a href="#" class="nav-item">Legal Notice</a>
         <a href="#" class="nav-item">Privacy Notice</a>
         <a href="#" class="nav-item">Contact Us</a>
-        <a href="#" class="nav-item">Your Privacy Choices</a>
+        <a href="#" class="nav-item"><span class="Privacy">Your Privacy Choices<img
+                    src="./../../../assets/icon-privacy 1.svg" /></span></a>
     </div>
 
 </footer>
