--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -74,7 +74,15 @@
                 color: $theme-text-primary;
             }
                                                 .privacy {
-                                                    display: inline-flex;
+                                                    display: flex;
+                                                        align-items: center;
+                                                        grid-column: span 2;
+                                                        white-space: nowrap;
+                                                    
+                                                        img {
+                                                            margin-left: 0.5rem;
+                                                    
+                                                        }
                         
                                                 }
                                                 }
