--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -9,7 +9,7 @@
     padding: 1rem;
     padding-top: 2rem;
     padding-bottom: 2.31rem;
-    background-color: $theme-footer-background; // Replace with actual color variable
+    background-color: $theme-footer-background;
     color: $theme-text-light;
     @media (max-width: breakpoint('desktop')) {
             padding: 1rem 2.88rem;
